2012-04-09  James Robinson  <jamesr@chromium.org>

        [chromium] CCLayerTreeHost / WebLayerTreeView should be single ownership, not RefCounted
        https://bugs.webkit.org/show_bug.cgi?id=83413

        Reviewed by Adrienne Walker.

        This makes WebLayerTreeView noncopyable to better match the underlying semantics. There is no code currently
        that attempts to copy WebLayerTreeView instances.

        * chromium/public/WebLayerTreeView.h:
        (WebKit):
        (WebLayerTreeView):

2012-04-04  Adam Barth  <abarth@webkit.org>

        figure out how to export webcore symbols from webkit.dll properly
        https://bugs.webkit.org/show_bug.cgi?id=83105

        Reviewed by Dimitri Glazkov.

        Unwind our ugly, ugly hack to make the Windows component build work.

        * chromium/public/WebMediaStreamSourcesRequest.h:
        (WebMediaStreamSourcesRequest):

2012-04-03  Adam Barth  <abarth@webkit.org>

        Unreviewed. This patch adds an ugly, ugly hack to bandaid over the
        Windows component build. See comments in the code for details.

        * chromium/public/WebMediaStreamSourcesRequest.h:
        (WebMediaStreamSourcesRequest):

2012-04-02  Zhenyao Mo  <zmo@google.com>

        Implement WebGLShaderPrecisionFormat
        https://bugs.webkit.org/show_bug.cgi?id=75925

        Reviewed by Kenneth Russell.

        * chromium/public/WebGraphicsContext3D.h: Add getShaderPrecisionFormat().
        (WebGraphicsContext3D):

2012-04-03  Adam Barth  <abarth@webkit.org>

        Attempt to fix the Windows component build by including these headers
        rather than forward declaring these objects.

        * chromium/public/WebMediaStreamSourcesRequest.h:
        (WebKit):

2012-04-02  Adam Barth  <abarth@webkit.org>

        [Chromium] Move a number of virtual functions from WebKitPlatformSupport.h into Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=82865

        Reviewed by Kent Tamura.
